hphp/hack/test/typecheck/reified_generics/type_constants_basic.php.exp
File "type_constants_basic.php", line 11, characters 10-17:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_basic.php", line 11, characters 10-17:
  The "as" operator cannot be used with the abstract type constant Ta because it is not marked <<__Enforceable>>
File "type_constants_basic.php", line 13, characters 10-17:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_basic.php", line 13, characters 10-17:
  The "as" operator cannot be used with a type with an erased generic type argument
File "type_constants_basic.php", line 14, characters 10-17:
Invalid "as" expression hint (Typing[4195])
  File "type_constants_basic.php", line 14, characters 10-17:
  The "as" operator cannot be used with the abstract type constant Td because it is not marked <<__Enforceable>>
